fix(style): User menu taking too much space

--- a/src/styles/navBar.css
+++ b/src/styles/navBar.css
@@ -43,19 +43,15 @@
 @media only screen and (max-width: 500px) {
     /* Another More button in More.jsx to free space */
     .navbar-container {
-        grid-template-columns: 0.5fr 0.75fr 1.2fr;
+        grid-template-columns: 0.5fr 1.5fr 0.5fr;
         column-gap: 2px;
-        padding: 15px 2px;
-    }
-
-    .user-menu {
-        margin-left: -20px;
+        padding: 15px 1px;
     }
 }
 
 @media only screen and (min-width: 500px) and (max-width: 800px) {
     .navbar-container {
-        grid-template-columns: 0.75fr 1fr 1.2fr;
+        grid-template-columns: 0.75fr 1.5fr 0.75fr;
         padding: 15px 5px;
     }
 }
